Added basic auth
