# docs/swagger.yaml
@@ -16,6 +16,11 @@ definitions:
     - content
     - title
     type: object
+  main.InvitationTokenResponse:
+    properties:
+      token:
+        type: string
+    type: object
   main.RegisterUserPayload:
     properties:
       email:
@@ -121,6 +126,8 @@ definitions:
         type: string
       id:
         type: integer
+      is_active:
+        type: boolean
       username:
         type: string
     type: object
@@ -154,7 +161,7 @@ paths:
         "201":
           description: User registered
           schema:
-            $ref: '#/definitions/store.User'
+            $ref: '#/definitions/main.InvitationTokenResponse'
         "400":
           description: Bad Request
           schema: {}
@@ -214,7 +221,7 @@ paths:
     delete:
       consumes:
       - application/json
-      description: Delete a post by ID
+      description: RevertCreateAndInvite a post by ID
       parameters:
       - description: Post ID
         in: path
@@ -395,6 +402,33 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Unfollows a user
+      tags:
+      - users
+  /users/activate/{token}:
+    put:
+      description: Activates/Register a user by invitation token
+      parameters:
+      - description: Invitation token
+        in: path
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: User activated
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Activates/Register a user
       tags:
       - users
   /users/feed:
